# Hybrid_rag_lab

./: .gitignore  README.md  comparison.md  pyproject.toml  pytest.ini
.github/workflows/: eval.yml
app/: main.py  rag.py  settings.py  tracing.py
dashboard/: app.py
docs/: failures.md
eval/: README.md  append_history.py  baseline.json  evaluate.py  golden_set.json  harness.py  history.json  last_run.json  recall_results.json  run_ragas.py  save_baseline.py  upload_langsmith.py
scripts/: Section_B_SDN.md  answer_schema.py  embed_gemini.py  embed_local.py  hello_qdrant.py  ingest.py  ingest_all.py  parent_retriever.py  query.py  query_hybrid.py  query_multiquery.py  query_reranked.py  query_rewrite.py  rag_chain.py  try_answer.py  try_selfquery.py  try_stream.py
scripts/data/: Section_A_Next_Generation_IP_Addressing.md  Section_C_IoT_WSN.md  Section_D_SDN_5G.md  Section_E_Network_Migration.md  Section_F_SDN_Security.md
tests/: conftest.py  test_answer_relevance.py  test_context_precision.py  test_faithfulness.py  test_regression.py  thresholds.py
