[project]
name = "rag-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=5.0.0",
    "fastapi>=0.136.3",
    "google-genai>=2.6.0",
    "groq>=1.2.0",
    "hf-transfer>=0.1.9",
    "langchain-google-vertexai>=3.2.4",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "ragas>=0.3.1",
    "rich>=15.0.0",
    "sentence-transformers>=5.5.1",
    "tavily-python>=0.7.24",
    "uvicorn[standard]>=0.49.0",
]
